--- a/SerialPort/build.gradle
+++ b/SerialPort/build.gradle
@@ -30,13 +30,13 @@ android {
 
 publish{
     //bintray.com的用户名  
-    userOrg='jzman'
+    userOrg='qiaozhuang@miotlink.com'
     //一般写包名   
     groupId='com.mlink.serialport'
     //指定仓库名称//   
     repoName="maven"
     //项目名称    
-    artifactId='SerialPort'
+    artifactId='SerialPortSDK'
     //版本号   
     publishVersion='1.0.1'
     //项目描述    
