--- a/SerialPort/build.gradle
+++ b/SerialPort/build.gradle
@@ -34,7 +34,7 @@ publish{
     //一般写包名   
     groupId='com.mlink.serialport'
     //指定仓库名称//   
-    repoName="maven"
+    repoName="mlink"
     //项目名称    
     artifactId='SerialPortSDK'
     //版本号   
